1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.h (Arguments): Declare +createBegin:, -createEnd,
	-setArgc:Argv:, -setAppModeString:, -setOptionFunc:, -setBugAddress:,
	and -setVersion:.  Move addOptions: to creating phase.

	* Arguments.m
	(+createArgc:Argv:version:bugAddress:options:optionFunc:): Split
	to use createEnd.

	* Arguments.[hm] ([Arguments_c -setVersion:], 
	[Arguments_c -setBugAddress:], [Arguments_c -createEnd]): New 
	methods.

	* Arguments.h (Arguments): Add version and bugAddress ivars.
	Declare +createBegin:. 

	* defobj.h (DefinedClass): Declare addVariable.
	(Serialization): Declare updateArchiver.

	* DefObject.m ([Object_s -updateArchiver]): New method
	(need something better than getObjectName for key).

	* DefClass.m (allocate_ivar_list, align, addVariable): 
	New functions -- addVariable uses former two.
	([BehaviorPhase_s -updateArchiver], [BehaviorPhase_s -lispOut:]): 
	New methods.

	* Archiver.m (archiverRegister): If client is a class, copy
	it and change class to id_BehaviorPhase_s so that it can
	be queried.

1998-12-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.h (Archiver, Serialization): Add protocol summary and
	description strings.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Symbol.m: Don't include stdio.h or stdarg.h.

	* DefObject.[hm], defobj.h: New method +conformsTo:.

	* Customize.h: Include DefClass.h.

	* Customize.[hm] (getNextPhase, setNextPhase): Use deference to
	casts to BehaviorPhase_s instead of doing constant array offset
	into a Class.

	* make-h2x: Don't accept @implementation with a name starting with "_".

	* defobj.h (archiver{Register,Unregister},
	{lisp,HDF5}Archiver{Get,Put}): Prefix declaration with `extern'.

1998-12-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefClass.m ([CreatedClass_s +createBegin:]): Don't use temporary
	variable.

	* Customize.h (createByCopy, createByMessageTo,
	createByMessageToCopy): Return YES/NO instead of 1/0.
