@@ -1,3 +1,8 @@
+1999-01-07  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* Arguments.h (Arguments_c): Inherit from CreateDrop, not
+	CreateDrop_s, since we can't do dynamic phase splitting.
+
 1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* defobj.h (Arguments): Declare +createBegin:, -createEnd,
